Dark mode fixes

--- a/apps/frontend/src/styles/global.css
+++ b/apps/frontend/src/styles/global.css
@@ -81,6 +81,7 @@ body {
 
 :root {
   /* ===== COLOR VARIABLES - LIGHT MODE (DEFAULT) ===== */
+  --color-brand-logo-wordmark: #18427e;
   --color-n-50: #ffffff;
   --color-n-100: #f1f5f9;
   --color-n-200: #e2e8f1;
@@ -109,6 +110,7 @@ body {
 
 @media (prefers-color-scheme: dark) {
   :root {
+    --color-brand-logo-wordmark: var(--color-n-950);
     --color-n-50: #020617;
     --color-n-100: #0e172b;
     --color-n-200: #1d283d;
@@ -139,6 +141,7 @@ body {
 /* ===== COLOR VARIABLES - DARK MODE ===== */
 
 .dark {
+  --color-brand-logo-wordmark: var(--color-n-950);
   --color-n-50: #020617;
   --color-n-100: #0e172b;
   --color-n-200: #1d283d;
